# matscipy-neighbours

./: CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  gpu-compile.yml
benchmarks/: bench_core.cc
docs/: algorithm.md  benchmark.md  benchmark_warp.md  cpp.md  examples.md  index.md  installation.md  python.md
examples/lj_langevin/: CMakeLists.txt  README.md  benchmark.py  benchmark_warp.py  lj_common.hh  lj_langevin.py  lj_langevin_cpu.cc  lj_langevin_gpu.cu  lj_langevin_jax.py  lj_langevin_warp.py
language_bindings/python/: CMakeLists.txt  bind_py_dlpack.cc  bind_py_dlpack.hh  bind_py_neighbours.cc  bind_py_neighbours.hh  dlpack.h  module.c
language_bindings/python/matscipy_neighbours/: __init__.py  _ase_plugin.py  _device.py  neighbours.py
src/libneighbours/: CMakeLists.txt  cell_list.cc  cell_list.hh  device.hh  device_primitives.cc  device_primitives.hh  error.cc  error.hh  first_neighbours.cc  first_neighbours.hh  memory_space.cc  memory_space.hh  memory_space_cuda.cu  memory_space_gpu.cc  neighbour_list.cc  neighbour_list.hh  neighbour_list_gpu.cc  neighbour_list_gpu.hh  neighbour_visit.hh  tools.cc  tools.hh  triplet_list.cc  triplet_list.hh  types.hh
tests/: conftest.py  test_core.cc  test_dlpack.py  test_extension.py  test_matscipy_compat.py  test_memory_space.cc  test_neighbour_list_gpu.cc
